Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         .logo-img {
             max-width: 200px;
             height: auto;
-            /* Remover este background cinza quando colocar seu logo real */
+            /* Logo Domus em ambiente sofisticado.png */
             background: #ddd; 
             padding: 10px;
             border-radius: 5px;
@@ -178,4 +178,5 @@
     </div>
 
 </body>
+
 </html>
