Fix HTML structure and formatting issues

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         .logo-img {
             max-width: 200px;
             height: auto;
-            /* Logo Domus em ambiente sofisticado.png */
+            /* Remover este background cinza quando colocar seu logo real */
             background: #ddd; 
             padding: 10px;
             border-radius: 5px;
@@ -180,4 +180,5 @@
 </body>
 
 </html>
+
 
