Replace logo image and adjust styling
Updated logo image and adjusted its size for better display.

--- a/index.html
+++ b/index.html
@@ -67,14 +67,10 @@
             margin-bottom: 30px;
         }
         .logo-img {
-            max-width: 200px;
-            height: auto;
-            /* Remover este background cinza quando colocar seu logo real */
-            background: #ddd; 
-            padding: 10px;
-            border-radius: 5px;
-        }
-
+    max-width: 220px; /* Largura do logo */
+    height: auto;     /* Ajusta a altura automaticamente */
+    display: block;   /* Centraliza */
+    margin: 0 auto;   /* Centraliza */
         /* Banners Azuis de Desconto */
         .discount-banner-group {
             width: 100%;
@@ -150,10 +146,7 @@
         <div class="content-wrapper">
             
             <div class="logo-area">
-                <svg class="logo-img" width="200" height="60" viewBox="0 0 200 60" fill="none" xmlns="http://www.w3.org/2000/svg" style="background: transparent;">
-                    <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#004e92" font-weight="900" font-size="30">DOMUS</text>
-                    <text x="50%" y="80%" dominant-baseline="middle" text-anchor="middle" fill="#004e92" font-size="10">Soluções Imobiliárias</text>
-                </svg>
+                <img src="logo-domus.png" alt="DOMUS Logo" class="logo-img">
             </div>
 
             <div class="discount-banner-group">
@@ -180,5 +173,6 @@
 </body>
 
 </html>
+
 
 
