--- a/index.html
+++ b/index.html
@@ -145,8 +145,14 @@
     <div class="smartphone-screen">
         <div class="content-wrapper">
             
+           <div class="smartphone-screen">
+        <div class="content-wrapper">
+            
             <div class="logo-area">
-                <img src="logo-domus.png" alt="DOMUS Logo" class="logo-img">
+                <svg class="logo-img" width="200" height="60" viewBox="0 0 200 60" fill="none" xmlns="http://www.w3.org/2000/svg" style="background: transparent;">
+                    <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#004e92" font-weight="900" font-size="30">DOMUS</text>
+                    <text x="50%" y="80%" dominant-baseline="middle" text-anchor="middle" fill="#004e92" font-size="10">Soluções Imobiliárias</text>
+                </svg>
             </div>
 
             <div class="discount-banner-group">
@@ -173,6 +179,7 @@
 </body>
 
 </html>
+
 
 
 
