Refactor index.html structure and styles

--- a/index.html
+++ b/index.html
@@ -67,10 +67,14 @@
             margin-bottom: 30px;
         }
         .logo-img {
-    max-width: 220px; /* Largura do logo */
-    height: auto;     /* Ajusta a altura automaticamente */
-    display: block;   /* Centraliza */
-    margin: 0 auto;   /* Centraliza */
+            max-width: 200px;
+            height: auto;
+            /* Remover este background cinza quando colocar seu logo real */
+            background: #ddd; 
+            padding: 10px;
+            border-radius: 5px;
+        }
+
         /* Banners Azuis de Desconto */
         .discount-banner-group {
             width: 100%;
@@ -145,9 +149,6 @@
     <div class="smartphone-screen">
         <div class="content-wrapper">
             
-           <div class="smartphone-screen">
-        <div class="content-wrapper">
-            
             <div class="logo-area">
                 <svg class="logo-img" width="200" height="60" viewBox="0 0 200 60" fill="none" xmlns="http://www.w3.org/2000/svg" style="background: transparent;">
                     <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#004e92" font-weight="900" font-size="30">DOMUS</text>
@@ -171,15 +172,10 @@
 
             <div class="footer">
                 Apresente este voucher ao seu gestor <strong>DOMUS</strong>.<br>
-                WhatsApp: (19) 99891-8427 | Limeira - SP
+                WhatsApp: (19) 99999-9999 | Limeira - SP
             </div>
         </div>
     </div>
 
 </body>
-
 </html>
-
-
-
-
